added necessary aria landmarks

--- a/SlideshowBanner-1-column.html
+++ b/SlideshowBanner-1-column.html
@@ -61,8 +61,10 @@ Based on Twitter Bootstrap
 </header>
 
     <!-- Include for optional slideshow banner -->
-    
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
+    </section>
+
     
 
 <div id="main-content" class="main-content">
