--- a/sample/buttons.html
+++ b/sample/buttons.html
@@ -59,7 +59,7 @@ Based on Twitter Bootstrap
         <main class="main-primary">            
             <ol class="breadcrumb">
                 <li><a href="../index.html" title="Home page">Home</a></li>
-                <<li><a href="/sample/" title="Content Modules landing page">Content Modules</a></li>
+                <li><a href="/sample/" title="Content Modules landing page">Content Modules</a></li>
                 <li class="active">Buttons</li>
             </ol>
             <div class="group">
