--- a/sample/colorscheme-mono.html
+++ b/sample/colorscheme-mono.html
@@ -154,13 +154,14 @@
 
     </header>
     <div id="main-content" class="main-content">
-        <div class="container">            <ol class="breadcrumb">
+        <main class="main-primary">
+            <div class="container">            
+                <ol class="breadcrumb">
                 <li><a href="../index.html" title="Home page">Home</a></li>
                 <li><a href="color-schemes.html" title="Color schemes landing page">Color Schemes</a></li>
                 <li class="active">Mono</li>
             </ol>
         </div>
-        <main class="main-primary">
             <div class="section">
                 <!-- Content Demonstration -->
                 <div class="container">
