--- a/sample/contact-widgets.html
+++ b/sample/contact-widgets.html
@@ -55,6 +55,7 @@ Based on Twitter Bootstrap
 </header>
 
 <div id="main-content" class="main-content">
+    <main class="main-primary"></main>
     <div class="container p-b-lg">
         <article class="main-primary">            
             <ol class="breadcrumb">
@@ -118,6 +119,7 @@ Based on Twitter Bootstrap
             </div>
         </article>
     </div>
+</main>
 </div>
 
 <!--#include virtual="/ssi/global-footer.html" -->
