--- a/sample/fixed-header.html
+++ b/sample/fixed-header.html
@@ -59,8 +59,11 @@
 
 
     <div id="main-content" class="main-content">
+        <section aria-label="banner">
         <!-- Include Page Template -->
         <!--#include virtual="/ssi/header-large-banner.html" -->
+        </section>
+
         <div class="container p-b-lg">
             <main class="main-primary">
                 <ol class="breadcrumb">
