--- a/sample/layout-events.html
+++ b/sample/layout-events.html
@@ -54,14 +54,11 @@
         <div class="header-decoration"></div>
     </header>
 
-    <div id="main-content" class="main-content">
-        <div class="header-image text-center">
-            <h1>Events</h1>
-        </div>
-
-
+    <div id="main-content" class="main-content">\
         <main class="main-primary">
-
+            <div class="header-image text-center">
+                <h1>Events</h1>
+            </div>
             <div class="container p-t-lg">
                 <div class="offset-md-2 col-md-8 text-center">
                     <h2 class="m-t-0">Census 2030 Volunteers Orientation and Rally</h2>
