--- a/sample/page-templates.html
+++ b/sample/page-templates.html
@@ -56,7 +56,10 @@
 
     <div id="main-content" class="main-content">
         <!-- Include Page Template -->
+        <section aria-label="hero banner">
         <!--#include virtual="/ssi/header-primary-banner.html" -->
+        </section>
+
         <div class="section p-b-lg">
             <main class="main-primary">            
                 <ol class="breadcrumb">
