--- a/sample/slideshow-header-banner.html
+++ b/sample/slideshow-header-banner.html
@@ -61,7 +61,10 @@ Based on Twitter Bootstrap
 
 <div id="main-content" class="main-content">
     <!-- Include Optional Slideshow banner -->
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
+    </section>
+
     <div class="container p-b-lg">
         <main class="main-primary">            
             <ol class="breadcrumb">
