--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -1,3 +1,4 @@
+<section aria-label="footer links and information">
 <div class="section section-impact p-b-lg">
     <div class="container">
         <div class="row">
@@ -85,3 +86,4 @@
         </div>
     </div>
 </div>
+</section>
