--- a/sample/large-header-banner.html
+++ b/sample/large-header-banner.html
@@ -59,7 +59,10 @@ Based on Twitter Bootstrap
 
 <div id="main-content" class="main-content">
     <!-- Include Page Template -->
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-large-banner.html" -->
+    </section>
+
     <div class="container p-b-lg">
         <main class="main-primary">
             <ol class="breadcrumb">
