--- a/sample/rotating-header-banner.html
+++ b/sample/rotating-header-banner.html
@@ -53,7 +53,10 @@ var defaultActiveLink = "Components";
 <div id="main-content" class="main-content">
 
     <!-- Include Optional Slideshow banner -->
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
+    </section>
+
     <div class="container p-b-lg">
         <main class="main-primary">            
             <ol class="breadcrumb">
