fixed aria landmark issue

--- a/sample/featured-search.html
+++ b/sample/featured-search.html
@@ -26,14 +26,7 @@ Based on Twitter Bootstrap
 </head>
 
 <body>
-    <script>
-        //makes the browser wait to display the page until it's fully loaded.
-        // Use it if page contains primary or slideshow banner to make sure page content loads smouthly
-        $('body').css('opacity', 0);
-        $(window).load(function () {
-            $("body").fadeTo("slow", 1);
-        });
-    </script>
+
 
     <header role="banner" id="header" class="global-header fixed">
         <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
@@ -69,13 +62,19 @@ Based on Twitter Bootstrap
 
 
     <!-- Ask Bar -->
-    <!--#include virtual="/ssi/ask-bar.html" -->
+    <section aria-label="ask bar">
+   <!--#include virtual="/ssi/ask-bar.html" -->
+    </section>
+ 
 
 
 
     <div id="main-content" class="main-content">
         <!-- Include Page Template -->
-        <!--#include virtual="/ssi/header-single-banner.html" -->
+        <section aria-label="hero banner">
+      <!--#include virtual="/ssi/header-single-banner.html" -->
+        </section>
+  
         <div class="container p-b-lg">
             <main class="main-primary">            
                 <ol class="breadcrumb">
