--- a/sample/fixed-header.html
+++ b/sample/fixed-header.html
@@ -59,7 +59,7 @@
 
 
     <div id="main-content" class="main-content">
-        <section aria-label="banner">
+        <section aria-label="slider">
         <!-- Include Page Template -->
         <!--#include virtual="/ssi/header-large-banner.html" -->
         </section>
