--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 
 <div id="main-content" class="main-content">
     <!-- Include for optional slideshow banner -->
+    <section aria-label="hero banner">
     <!--#include virtual="/ssi/header-large-banner.html" -->
+    </section>
+
     <main class="main-primary">
         <!-- Begin Main Content -->
         <!--#include virtual="/ssi/section-icon-blocks.html" -->
