fixed Scrollable element is not keyboard accessible issue

--- a/sample/form.html
+++ b/sample/form.html
@@ -82,7 +82,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/form.html" --></code></pre>
+                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/form.html" --></code></pre>
                     </div>
                 </div>
 
@@ -95,7 +95,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-300"><code class="overflow-auto">
+                        <pre><code class="overflow-auto">
 <form role="form">
                         <div class="group">
                         <div class="form-group half">
@@ -142,7 +142,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/form-states.html" --></code></pre>
+                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/form-states.html" --></code></pre>
                     </div>
                 </div>
                 <hr />
@@ -155,7 +155,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-200"><code class="overflow-auto"><!--#include virtual="/sample/modules/form-file-input.html" --></code></pre>
+                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/form-file-input.html" --></code></pre>
                     </div>
                 </div>
 
@@ -172,7 +172,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/form-radios.html" -->
+                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/form-radios.html" -->
 <!--#include virtual="/sample/modules/form-checkboxes.html" -->
                         </code></pre>
                     </div>
@@ -187,7 +187,7 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <h2>Source Code:</h2>
-                        <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/form-select.html" --></code></pre>
+                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/form-select.html" --></code></pre>
                     </div>
 
                 </div>
