--- a/sample/profile-banners.html
+++ b/sample/profile-banners.html
@@ -79,10 +79,10 @@ var defaultActiveLink = "Components";
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                <pre class="height-300"><code class="overflow-auto height-300"><!--#include virtual="/sample/modules/profile-banners.html" --></code></pre>
+                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/profile-banners.html" --></code></pre>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                <pre class="height-300"><code class="overflow-auto height-300"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></code></pre>
+                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></code></pre>
                             </div>
                         </div>
                     </div>
@@ -107,10 +107,10 @@ var defaultActiveLink = "Components";
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html2">
-                                <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/profile-banners-vertical.html" --></code></pre>
+                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/profile-banners-vertical.html" --></code></pre>
                             </div>
                             <div class="tab-pane" id="microdata2">
-                                <pre class="height-300"><code class="overflow-auto height-300"><!--#include virtual="/sample/modules/profile-banners-vertical-schema.html" --></code></pre>
+                                <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/profile-banners-vertical-schema.html" --></code></pre>
                             </div>
                         </div>
                     </div>
