--- a/sample/service-group.html
+++ b/sample/service-group.html
@@ -86,7 +86,7 @@ var defaultActiveLink = "Components";
                 <div class="group">
 
                     <h2>Source Code:</h2>
-                    <pre class="height-600"><code class="overflow-auto"><!--#include virtual="/sample/modules/service-tiles.html" --></code></pre>
+                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/service-tiles.html" --></code></pre>
                     <div class="clearfix"><br /></div>
                 </div>
             </div>
