--- a/update.html
+++ b/update.html
@@ -78,7 +78,7 @@
                     <li class="m-t-md">Download the latest production (v5.5) or beta (v6) State Template release from our <a href="https://github.com/Office-of-Digital-Innovation/California-State-Template/releases">GitHub repository</a> </li>
                     <li class="m-t-md">
                         Copy over the core css and colorscheme files from /css folder or compare the old and new CSS files. Most updates include changes to the CSS code.<br />
-                        <pre class="w-50 m-t"><code class="language-plaintext" data-lang="plaintext">StateTemplate/
+                        <pre class="m-t"><code class="language-plaintext" data-lang="plaintext">StateTemplate/
     ├── css/
     │   ├── cagov.core.css
     │   ├── colorscheme-oceanside.css
@@ -102,7 +102,7 @@
                     </li>
                     <li class="m-t-md">
                         Copy over the core js files and other js libraries from /js folder or compare the old and new js files.<br />
-                        <pre class="w-50 m-t"><code class="language-plaintext" data-lang="plaintext">
+                        <pre class="m-t"><code class="language-plaintext" data-lang="plaintext">
     StateTemplate/
     └── css/
     └── fonts/
@@ -135,7 +135,7 @@
             <li><code>global-footer.html</code></li>
                                 </ul> -->
 
-                        <pre class="w-50 m-t"><code class="language-plaintext" data-lang="plaintext">
+                        <pre class="m-t"><code class="language-plaintext" data-lang="plaintext">
     StateTemplate/
     └── css/
     └── fonts/
@@ -156,7 +156,7 @@
                     </li>
                     <li class="m-t-md">
                         Copy over the fonts files from /fonts folder<br />
-                        <pre class="w-50 m-t"><code class="language-plaintext" data-lang="plaintext">
+                        <pre class="m-t"><code class="language-plaintext" data-lang="plaintext">
     StateTemplate/
     └── css/
     ├── fonts/
