--- a/sample/navigation-sidebar.html
+++ b/sample/navigation-sidebar.html
@@ -88,7 +88,7 @@ var defaultActiveLink = "Components";
                 </div>
                 <div class="col-md-8">
                     <h2>Source Code:</h2>
-                    <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side.html" --></code></pre>
+                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side.html" --></code></pre>
                 </div>
             </div>
             <hr />
@@ -101,7 +101,7 @@ var defaultActiveLink = "Components";
                 </div>
                 <div class="col-md-8">
                     <h2>Source Code:</h2>
-                    <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-standout.html" --></code></pre>
+                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-standout.html" --></code></pre>
                 </div>
             </div>
 
@@ -113,7 +113,7 @@ var defaultActiveLink = "Components";
                 </div>
                 <div class="col-md-8">
                     <h2>Source Code:</h2>
-                    <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-primary.html" --></code></pre>
+                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-primary.html" --></code></pre>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@ var defaultActiveLink = "Components";
                 </div>
                 <div class="col-md-8">
                     <h2>Source Code:</h2>
-                    <pre class="height-300"><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-understated.html" --></code></pre>
+                    <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/nav-side-understated.html" --></code></pre>
                 </div>
             </div>
 
