fixed color contrast issue

--- a/sample/layout-news.html
+++ b/sample/layout-news.html
@@ -266,7 +266,7 @@
                 <div class="group">
                     <div class="quarter m-b-md">
                         <!-- Article -->
-                        <article class="block-hover">
+                        <article class="block-hover section-standout">
                             <figure class="bg-overlay">
                                 <img class="img-fluid w-100 block-hover_zoom" src="/images/news-image5.jpg" alt="News Image 5">
                             </figure>
@@ -289,7 +289,7 @@
                     </div>
                     <div class="quarter m-b-md">
                         <!-- Article -->
-                        <article class="block-hover">
+                        <article class="block-hover section-standout">
                             <figure class="bg-overlay">
                                 <img class="img-fluid w-100 block-hover_zoom" src="/images/news-image6.jpg" alt="News Image 6">
                             </figure>
@@ -312,7 +312,7 @@
                     </div>
                     <div class="quarter m-b-md">
                         <!-- Article -->
-                        <article class="block-hover">
+                        <article class="block-hover section-standout">
                             <figure class="bg-overlay">
                                 <img class="img-fluid w-100 block-hover_zoom"  src="/images/news-image7.jpg" alt="News Image 7">
                             </figure>
@@ -335,7 +335,7 @@
                     </div>
                     <div class="quarter m-b-md">
                         <!-- Article -->
-                        <article class="block-hover">
+                        <article class="block-hover section-standout">
                             <figure class="bg-overlay">
                                 <img class="img-fluid w-100 block-hover_zoom" src="/images/news-image8.jpg" alt="News Image 8">
                             </figure>
