--- a/ssi/section-green-stats.html
+++ b/ssi/section-green-stats.html
@@ -1,39 +1,42 @@
-<div class="section bg-standout-radialgradient color-white">
-    <div class="container">
-        <div class="row">
-            <!-- Counter Module -->
-            <div class="col-md-3 col-sm-6 ">
-                <div class="stat-counter text-accent9">
-                    <span class="number-counter">180</span><span class="unit">+</span>
+<div class="section-standout">
+    <div class="bg-standout-radialgradient color-white p-y-md">
+        <div class="container">
+            <div class="row">
+                <!-- Counter Module -->
+                <div class="col-md-3 col-sm-6 ">
+                    <div class="stat-counter text-accent9">
+                        <span class="number-counter">180</span><span class="unit">+</span>
+                    </div>
+                    <p class="text-center">Code Samples</p>
                 </div>
-                <p class="text-center">Code Samples</p>
+
+                <!-- Counter Module -->
+                <div class="col-md-3 col-sm-6 ">
+                    <div class="stat-counter text-accent-s1">
+                        <span class="number-counter">10</span>
+                    </div>
+                    <p class="text-center">Color Schemes</p>
+                </div>
+
+                <!-- Counter Module -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="stat-counter text-accent-s2">
+                        <span class="number-counter">20</span><span class="unit">+</span>
+                    </div>
+                    <p class="text-center">CDN Releases</p>
+                </div>
+
+                <!-- Counter Module -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="stat-counter text-accent-p1">
+                        <span class="number-counter">200</span><span class="unit">+</span>
+                    </div>
+                    <p class="text-center">State Agencies using State Template</p>
+                </div>
+
             </div>
 
-            <!-- Counter Module -->
-            <div class="col-md-3 col-sm-6 ">
-                <div class="stat-counter text-accent-s1">
-                    <span class="number-counter">10</span>
-                </div>
-                <p class="text-center">Color Schemes</p>
-            </div>
-
-            <!-- Counter Module -->
-            <div class="col-md-3 col-sm-6">
-                <div class="stat-counter text-accent-s2">
-                    <span class="number-counter">20</span><span class="unit">+</span>
-                </div>
-                <p class="text-center">CDN Releases</p>
-            </div>
-
-            <!-- Counter Module -->
-            <div class="col-md-3 col-sm-6">
-                <div class="stat-counter text-accent-p1">
-                    <span class="number-counter">200</span><span class="unit">+</span>
-                </div>
-                <p class="text-center">State Agencies using State Template</p>
-            </div>
-            
         </div>
-      
-     </div>
+    </div>
+
 </div>
