--- a/sample/layout-events.html
+++ b/sample/layout-events.html
@@ -54,7 +54,7 @@
         <div class="header-decoration"></div>
     </header>
 
-    <div id="main-content" class="main-content">\
+    <div id="main-content" class="main-content">
         <main class="main-primary">
             <div class="header-image text-center">
                 <h1>Events</h1>
