fixed ID is not unique issue

--- a/sample/layout-faq.html
+++ b/sample/layout-faq.html
@@ -132,11 +132,11 @@
 
 
                         <h2 class="text-center" id="installation">INSTALLATION</h2>
-                        <div class="panel-group accordion" id="example-accordion" role="tablist" aria-multiselectable="true">
+                        <div class="panel-group accordion" id="example-accordion1" role="tablist" aria-multiselectable="true">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading4">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse4" aria-controls="collapse4">How can I clone State Template from GitHub and bring it into my Visual Studio?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1" href="#collapse4" aria-controls="collapse4">How can I clone State Template from GitHub and bring it into my Visual Studio?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
@@ -154,7 +154,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading5">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse5" aria-controls="collapse5">How do I set up local Docker container?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1" href="#collapse5" aria-controls="collapse5">How do I set up local Docker container?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
@@ -172,7 +172,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading6">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse6" aria-controls="collapse6">Do I need to bring a boostrap library on top of State template?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion1" href="#collapse6" aria-controls="collapse6">Do I need to bring a boostrap library on top of State template?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
@@ -187,11 +187,11 @@
 
 
                         <h2 class="text-center" id="update">UPDATE</h2>
-                        <div class="panel-group accordion" id="example-accordion" role="tablist" aria-multiselectable="true">
+                        <div class="panel-group accordion" id="example-accordion2" role="tablist" aria-multiselectable="true">
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading7">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse7" aria-controls="collapse7">How can I update my existing website with the most currest State Tempalte version?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2" href="#collapse7" aria-controls="collapse7">How can I update my existing website with the most currest State Tempalte version?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
@@ -204,18 +204,20 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading8">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse8" aria-controls="collapse8">Is my old website will be compatible with State template latest vesrion?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2" href="#collapse8" aria-controls="collapse8">Is my old website will be compatible with State template latest vesrion?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading8">
-                                    <p>Most likely. State Template was designed with backward compatibility in mind. The most current version that runs on Bootstrap 4 is mostly compatible with previous Boostrap 3 versions. </p>
+                                    <div class="panel-body">
+                                        <p>Most likely. State Template was designed with backward compatibility in mind. The most current version that runs on Bootstrap 4 is mostly compatible with previous Boostrap 3 versions. </p>
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="panel panel-default">
                                 <div class="panel-heading" role="tab" id="heading9">
                                     <h4 class="panel-title">
-                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion" href="#collapse9" aria-controls="collapse9">How can I get notifications about State template updates?</a>
+                                        <a class="collapsed" data-toggle="collapse" data-parent="#example-accordion2" href="#collapse9" aria-controls="collapse9">How can I get notifications about State template updates?</a>
                                     </h4>
                                 </div>
                                 <div id="collapse9" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading9">
