--- a/cdn.html
+++ b/cdn.html
@@ -149,9 +149,8 @@
 
 
                 
-
+                <h3>State Template v6</h3>
                 <ul id="accordion" class="accordion-list list-overstated" role="tablist" multiselectable="true">
-                    <h3>State Template v6</h3>
                     <li id="panel_v6_0_3" class="tab" aria-selected="false" aria-controls="panel_6_0_3" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 6.0.3</a>
                     </li>
@@ -314,7 +313,7 @@ https://california.azureedge.net/cdt/statetemplate/6.0.0/js/cagov.core.min.js
                     </div>
 
 
-                    <h3>State Template v5.5</h3>
+                    <div class="h3">State Template v5.5</div>
                     <li id="panel_v5_5_20" class="tab" aria-selected="false" aria-controls="panel_5_5_20" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 5.5.20</a>
                     </li>
@@ -1077,7 +1076,7 @@ https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.min.js
 
 
 
-                    <h3>State Template v5</h3>
+                    <div class="h3">State Template v5</div>
                     <li id="tab_v5_0_17" class="tab" aria-selected="false" aria-controls="tab_5_0_17" aria-expanded="false" role="tab" tabindex="0">
                         <a>Version 5.0.17</a>
                     </li>
