--- a/sample/colorscheme-eureka.html
+++ b/sample/colorscheme-eureka.html
@@ -118,8 +118,8 @@
 
         div.caption {
             color: #555;
-            font-size: 12px;
-            line-height: 16px;
+            font-size: 0.75rem;
+            line-height: 1rem;
             margin: 0 0 0 10px;
             text-align: center;
         }
