--- a/sample/countdown.html
+++ b/sample/countdown.html
@@ -26,7 +26,7 @@
     <style>
         #demo, #demo2, #demo3, #demo4 {
             text-align: center;
-            font-size: 30px;
+            font-size: 1.875rem;
             margin-top: 0px;
             font-weight: 700;
             background-color: #153554;
@@ -35,7 +35,7 @@
         }
 
         .countdown-text {
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 400;
         }
     </style>
