--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -37,7 +37,7 @@
         }
 
         .glyph {
-            font-size: 16px;
+            font-size: 1rem;
             width: 50%;
             padding-bottom: 1em;
             padding-right: 4em;
@@ -158,11 +158,11 @@
         }
 
         .fs0 {
-            font-size: 16px;
+            font-size: 1rem;
         }
 
         .fs1 {
-            font-size: 24px;
+            font-size: 1.5rem;
         }
 
         .icon-value {
