Fixed some icon font class names

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -1056,8 +1056,8 @@ Based on Twitter Bootstrap
                         <p class="icon-value">e970</p>
                     </div>
                     <div class="glyph fs1">
-                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-collapse1"></span><span class="mls">
-                                ca-gov-icon-collapse1</span></div>
+                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-collapse"></span><span class="mls">
+                                ca-gov-icon-collapse</span></div>
                         <p class="icon-value">58</p>
                     </div>
                     <div class="glyph fs1">
@@ -1071,9 +1071,9 @@ Based on Twitter Bootstrap
                         <p class="icon-value">e621</p>
                     </div>
                     <div class="glyph fs1">
-                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-construction1"></span><span
+                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-construction"></span><span
                                 class="mls">
-                                ca-gov-icon-construction1</span></div>
+                                ca-gov-icon-construction</span></div>
                         <p class="icon-value">e628</p>
                     </div>
                     <div class="glyph fs1">
@@ -1275,8 +1275,8 @@ Based on Twitter Bootstrap
                         <p class="icon-value">e991</p>
                     </div>
                     <div class="glyph fs1">
-                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-expand1"></span><span class="mls">
-                                ca-gov-icon-expand1</span></div>
+                        <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-expand"></span><span class="mls">
+                                ca-gov-icon-expand</span></div>
                         <p class="icon-value">59</p>
                     </div>
                     <div class="glyph fs1">
