--- a/sample/modules/slideshow-banner.html
+++ b/sample/modules/slideshow-banner.html
@@ -1,12 +1,12 @@
 <div class="header-slideshow-banner hidden-print" style="min-height:460px">
     <div id="primary-carousel" class="carousel owl-carousel carousel-banner">
         <div class="slide" style="background-image: url('/images/main-banner.jpg');">
-            <a href="/">
+            <a href="/" aria-label="Slideshow Banner: Slide 1">
                 <p class="slide-text overflow-auto"><span class="title">Slideshow Banner</span><br>Caption for rotating banner. This caption is a link!</p>
             </a>
         </div>
         <div class="slide" style="background-image: url('/images/background-primary.jpg');">
-            <a href="/">
+            <a href="/"  aria-label="Slideshow Banner: Slide 2">
                 <p class="slide-text overflow-auto"><span class="title">Slideshow Banner</span><br>Caption for rotating banner.<br> This caption is a link!</p>
             </a>
         </div>
