added sr-only text to slide show banner slides links

--- a/ssi/header-slideshow-banner.html
+++ b/ssi/header-slideshow-banner.html
@@ -1,12 +1,14 @@
 <div class="header-slideshow-banner hidden-print overflow-auto" style="min-height:460px">
     <div id="primary-carousel" class="carousel owl-carousel carousel-banner">
         <div class="slide" style="background-image: url('/images/main-banner.jpg');">
-            <a href="/" title="Slideshow Banner: slide 1">
+            <a href="/">
+                <span class="sr-only">Slideshow Banner Slide 1 (information for screen reader)</span>
                 <p class="slide-text"><span class="title">Slideshow Banner </span><br>Caption for rotating banner. This caption is a link!</p>
             </a>
         </div>
         <div class="slide" style="background-image: url('/images/background-primary.jpg');">
-            <a href="/" title="Slideshow Banner: slide 2">
+            <a href="/">
+                <span class="sr-only">Slideshow Banner Slide 2 (information for screen reader)</span>
                 <p class="slide-text"><span class="title">Slideshow Banner </span><br>Caption for rotating banner.<br> This caption is a link!</p>
             </a>
         </div>
