--- a/ssi/header-slideshow-banner.html
+++ b/ssi/header-slideshow-banner.html
@@ -2,11 +2,13 @@
     <div id="primary-carousel" class="carousel owl-carousel carousel-banner">
         <div class="slide" style="background-image: url('/images/main-banner.jpg');">
             <a href="/">
+                <span class="sr-only">Slideshow Banner slide 1 (screen readers information)</span>
                 <p class="slide-text"><span class="title">Slideshow Banner</span><br>Caption for rotating banner. This caption is a link!</p>
             </a>
         </div>
         <div class="slide" style="background-image: url('/images/background-primary.jpg');">
             <a href="/">
+                <span class="sr-only">Slideshow Banner slide 2 (screen readers information)</span>
                 <p class="slide-text"><span class="title">Slideshow Banner</span><br>Caption for rotating banner.<br> This caption is a link!</p>
             </a>
         </div>
